<resources>
    <string name="app_name">Youtube_57</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="try_again">Try again</string>
    <string name="description">Description</string>
    <string name="playlist">Playlist</string>
    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="select_video_quality">Select video quality</string>
    <string name="video_quality_1080p">1080p</string>
    <string name="video_quality_720p">720p</string>
    <string name="video_quality_480p">480p</string>
    <string name="video_series">" video series"</string>
    <string name="you_don_t_have_internet_connection_try_again">You don\'t have Internet connection, try again</string>
</resources>