<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standard_margin"
    app:cardCornerRadius="@dimen/half_standard_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="@string/select_video_quality"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_1080"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/video_quality_1080p"
                android:textSize="@dimen/default_text_size"
                app:buttonTint="@color/red" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_720"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_quality_720p"
                android:textSize="@dimen/default_text_size"
                app:buttonTint="@color/red" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_480"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_quality_480p"
                android:textSize="@dimen/default_text_size"
                app:buttonTint="@color/red" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_download_alert_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bc_btn_download_alert_dialog"
            android:text="@string/download"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

</androidx.cardview.widget.CardView>