<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.video.VideoFragment">

    <LinearLayout
        android:id="@+id/main.container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <include
                android:id="@+id/layout_toolbar"
                layout="@layout/layout_appbar" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/main.appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_scrollFlags="scroll|enterAlways|snap">

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_video_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/standard_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_20sp"
                        tools:text="@string/title" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_download"
                    android:layout_width="@dimen/app_width"
                    android:layout_height="@dimen/app_height"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:background="@drawable/bc_btn_download"
                    android:drawableEnd="@drawable/ic_download"
                    android:gravity="center"
                    android:paddingEnd="@dimen/half_standard_margin"
                    android:text="@string/download"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:textSize="@dimen/default_text_size"
                    app:layout_anchor="@id/main.appbar" />

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_video_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/standard_margin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_text_size"
                        tools:text="@string/description" />

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="ObsoleteLayoutParam" />

    <FrameLayout
        android:id="@+id/container_no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include
            android:id="@+id/layout_no_connection"
            layout="@layout/layout_no_internet_connection" />
    </FrameLayout>

</LinearLayout>