<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.playlistitems.PlaylistItemsFragment">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <include
                android:id="@+id/layout_toolbar"
                layout="@layout/layout_appbar" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/main.appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <LinearLayout
                    android:id="@+id/container_playlist_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/gray"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_playlist_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/half_standard_margin"
                        android:padding="@dimen/standard_margin"
                        android:text="@string/title"
                        android:textSize="@dimen/playlist_title_text_size" />

                    <TextView
                        android:id="@+id/tv_playlist_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/half_standard_margin"
                        android:padding="@dimen/standard_margin"
                        android:text="@string/description"
                        android:textSize="@dimen/playlist_desc_text_size" />

                </LinearLayout>

            </com.google.android.material.appbar.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <TextView
                    android:id="@+id/tv_amount_of_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:textSize="@dimen/default_text_size"
                    tools:text="@string/video_series" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_playlist_items" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        tools:ignore="ObsoleteLayoutParam" />

                </FrameLayout>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:backgroundTint="@color/red"
                android:src="@drawable/ic_play_arrow"
                app:layout_anchor="@id/main.appbar"
                app:layout_anchorGravity="bottom|right|end" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container_no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include
            android:id="@+id/layout_no_connection"
            layout="@layout/layout_no_internet_connection" />
    </FrameLayout>

</LinearLayout>